--- a/public/style.css
+++ b/public/style.css
@@ -24,7 +24,7 @@ small {
 
 .container {
   margin: 0 auto;
-  max-width: 1000px;
+  max-width: 1200px;
   padding: 4rem;
 }
 
@@ -69,6 +69,14 @@ small {
 
 .card-list {
   margin-top: 4rem;
+}
+
+@media (min-width: 650px) {
+  .card-list {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
 }
 
 .card {
